[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sources/Levels/Level_1.gd" type="Script" id=1]
[ext_resource path="res://Sources/System/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Textures/Asset_Background_2_shading.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/asset_wall_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audios/Musics/loop_bubbles_02.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sources/System/Input_Manager.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sources/Bacteria/Bacteria_Manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sources/Nutrients/F_Nutrients/F_Nutrient.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sources/System/Game_Manager.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Camera_to_top"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Game_Manager/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1400 ) ]
}

[sub_resource type="Animation" id=2]
length = 2.0
loop = true

[node name="Level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="Menu" parent="." instance=ExtResource( 2 )]
margin_left = 60.231
margin_top = -691.614
margin_right = 60.231
margin_bottom = -691.614

[node name="Background" type="Sprite" parent="."]
position = Vector2( -2.38419e-007, -9.53674e-007 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -3.11894, -0.954689 )
scale = Vector2( 0.994608, 0.994608 )
polygon = PoolVector2Array( -154.834, -278.038, -127.809, -265.754, -120.6, -256.475, -119.62, -246.919, -121.963, -229.289, -127.417, -214.877, -128.39, -198.973, -125.353, -185.5, -112.42, -166.918, -105.798, -161.66, -96.4495, -160.296, -87.6853, -162.049, -81.1309, -167.484, -73.0782, -177.63, -68.8471, -189.594, -67.4301, -199.638, -68.8471, -209.249, -71.1306, -217.361, -79.4931, -231.359, -79.4931, -231.359, -80.9536, -237.493, -81.0634, -245.179, -72.9417, -256.746, -56.8032, -265.928, -36.9376, -274.108, 0.846105, -278.588, 16.7463, -277.047, -76.2174, -350.103, -368.572, -319.803, -500.419, -237.092, -559.683, -152.743, -584.251, -13.527, -568.691, 74.9164, -541.667, 142.887, -409.821, 267.241, -42.9443, 346.676, 184.716, 340.944, 444.793, 281.982, 576.639, 78.8893, 585.647, -66.8785, 480.006, -269.163, 171.273, -335.496, 16.9722, -277.024, 32.8757, -271.62, 44.3406, -263.431, 49.6149, -256.249, 52.3275, -250.071, 53.081, -243.741, 54.7388, -227.616, 59.0811, -213.476, 65.5894, -206.216, 73.7273, -201.243, 81.1117, -197.626, 88.3454, -196.873, 93.4758, -198.736, 99.4974, -202.599, 103.717, -206.819, 105.978, -215.56, 107.485, -223.245, 108.69, -229.424, 110.951, -237.713, 114.116, -246.152, 119.79, -255.896, 129.581, -267.823, 136.839, -273.366, 151.607, -282.299, 160.763, -285.036, 170.454, -286.36, 178.865, -285.036, 185.495, -282.299, 191.915, -276.195, 198.334, -269.25, 201.071, -263.04, 202.228, -257.252, 201.386, -251.99, 198.966, -247.675, 193.366, -242.86, 185.916, -238.203, 180.128, -232.941, 173.287, -222.558, 170.656, -213.192, 170.34, -205.299, 171.287, -198.774, 174.55, -193.091, 177.497, -190.565, 181.496, -188.986, 186.863, -188.881, 191.704, -189.302, 204.03, -193.822, 209.806, -198.774, 214.542, -205.193, 216.962, -211.403, 219.383, -218.664, 222.014, -225.505, 225.802, -232.661, 230.328, -237.713, 235.8, -243.291, 241.904, -247.606, 248.219, -250.868, 252.639, -252.447, 258.322, -252.973, 263.689, -252.762, 268.529, -250.973, 272.819, -247.871, 276.422, -244.238, 280.737, -237.081, 283.473, -229.82, 285.473, -220.874, 285.578, -212.689, 285.052, -203.93, 283.894, -197.406, 280.737, -190.039, 274.188, -175.866, 266.424, -161.016, 260.536, -146.325, 257.479, -135.501, 257.373, -122.556, 258.898, -116.844, 262.741, -107.822, 268.319, -98.3507, 273.37, -92.3525, 278.422, -88.4585, 284.315, -85.5118, 291.472, -84.6699, 296.839, -85.1961, 302.522, -86.9852, 309.152, -91.4053, 316.222, -97.1898, 322.728, -105.508, 327.148, -112.98, 329.358, -118.335, 331.148, -125.398, 332.41, -132.215, 332.516, -139.371, 331.782, -147.144, 329.569, -154.421, 326.622, -162.231, 320.413, -176.334, 317.887, -182.859, 316.94, -189.384, 317.88, -194.646, 320.939, -198.961, 324.412, -203.276, 329.358, -206.538, 335.673, -209.485, 345.776, -211.379, 355.872, -211.905, 365.561, -211.169, 374.605, -210.642, 384.392, -209.38, 393.653, -206.433, 401.019, -203.628, 410.176, -199.276, 418.49, -194.435, 425.962, -188.752, 433.329, -182.122, 440.38, -174.019, 447.432, -165.073, 464.559, -142.657, 476.346, -123.293, 482.45, -109.822, 484.766, -97.8016, 484.45, -89.1718, 483.818, -78.7529, 480.872, -69.7022, 474.978, -60.02, 469.98, -55.5069, 465.717, -53.6002, 461.086, -51.7059, 454.877, -50.864, 446.142, -51.7059, 436.039, -52.7583, 428.041, -53.916, 419.516, -55.1789, 410.781, -55.9156, 400.573, -56.0208, 390.89, -55.8103, 381.704, -53.9585, 373.315, -51.3902, 359.029, -45.8597, 348.399, -40.7028, 341.033, -35.8617, 336.086, -31.8626, 331.14, -26.6005, 328.404, -23.338, 326.93, -21.2332, 324.825, -16.0764, 324.825, -11.551, 324.72, -7.44662, 326.615, -2.18456, 329.14, 2.86702, 331.982, 7.18191, 334.297, 10.1287, 338.402, 14.1278, 344.19, 18.548, 351.136, 22.7576, 358.713, 25.5991, 365.449, 27.5751, 371.552, 28.9433, 377.972, 28.7328, 387.97, 26.8385, 393.969, 24.4179, 401.757, 21.4712, 423.501, 5.99415, 433.961, -4.52343, 447.747, -18.2048, 457.429, -26.0979, 465.954, -32.2019, 472.063, -34.9962, 481.745, -34.049, 487.639, -31.2075, 491.322, -27.1031, 495.848, -18.0524, 499.11, -7.58719, 500.794, 3.3579, 501.952, 18.3022, 502.583, 32.4045, 502.267, 47.1495, 500.373, 60.7256, 498.9, 70.934, 495.006, 82.721, 490.513, 95.9699, 485.744, 105.78, 481.535, 113.147, 474.168, 125.46, 466.38, 135.458, 456.908, 144.825, 451.752, 148.613, 449.436, 150.297, 442.069, 151.56, 436.913, 150.718, 431.124, 147.561, 424.284, 142.825, 417.864, 139.668, 412.497, 137.352, 405.679, 136.148, 398.605, 136.195, 393.974, 136.51, 388.419, 138.252, 385.051, 140.357, 382.105, 143.514, 380, 147.198, 378.421, 151.934, 377.474, 157.301, 377.895, 161.932, 378.842, 166.352, 380, 170.877, 381.999, 175.613, 384.525, 179.717, 387.367, 183.085, 391.892, 185.716, 396.207, 187.926, 401.469, 189.189, 406.626, 189.821, 411.151, 190.031, 414.94, 190.242, 420.623, 193.188, 423.254, 197.503, 425.148, 200.766, 425.254, 204.519, 425.464, 209.781, 423.359, 217.779, 420.307, 226.514, 416.519, 234.197, 409.994, 242.195, 401.68, 249.036, 393.786, 254.929, 380.367, 261.526, 369.055, 264.822, 360.109, 266.611, 353.073, 265.603, 346.113, 264.962, 339.694, 262.12, 331.801, 253.806, 326.644, 245.177, 323.171, 233.916, 321.066, 223.392, 318.435, 213.137, 315.067, 204.928, 310.121, 198.403, 306.332, 195.246, 300.663, 192.719, 295.071, 191.878, 288.231, 191.878, 282.548, 193.457, 277.601, 195.351, 272.445, 197.982, 268.761, 200.192, 265.709, 202.928, 262.341, 206.296, 260.237, 210.085, 258.763, 213.558, 258.342, 217.978, 258.658, 222.503, 260.868, 226.081, 262.236, 229.66, 265.709, 234.922, 269.182, 242.71, 270.655, 247.235, 271.287, 252.076, 270.129, 256.121, 268.866, 259.7, 266.588, 266.271, 262.378, 272.375, 258.027, 277.38, 252.801, 282.583, 243.435, 289.635, 234.173, 294.371, 216.703, 303.632, 199.128, 309.736, 186.815, 311.946, 169.661, 312.051, 152.927, 309.946, 114.292, 302.895, 65.5858, 291.253, 56.6201, 288.267, 49.4637, 286.056, 42.4125, 284.057, 27.8829, 284.281, 20.5363, 284.162, 14.748, 284.899, 5.26235, 287.214, -0.932935, 288.477, -13.4566, 292.687, -31.8738, 299.843, -36.3992, 300.474, -40.1221, 302.195, -47.4495, 302.053, -51.133, 301.737, -56.395, 299.317, -62.92, 294.055, -66.1825, 289.845, -69.9712, 282.057, -72.7074, 275.111, -75.2612, 266.12, -77.0503, 256.332, -79.0498, 247.071, -79.8918, 243.072, -81.4704, 239.388, -82.9438, 237.599, -85.1538, 235.915, -88.2058, 235.179, -91.1526, 235.389, -94.0993, 237.178, -96.0989, 239.283, -98.309, 242.335, -101.045, 246.019, -104.202, 251.491, -107.991, 257.911, -111.78, 263.173, -116.621, 268.54, -121.883, 273.276, -128.197, 276.959, -133.249, 279.485, -138.827, 280.853, -144.51, 281.38, -150.614, 281.38, -164.635, 279.275, -174.423, 275.802, -192.314, 268.33, -208.731, 259.805, -229.358, 249.386, -239.883, 244.65, -248.828, 241.598, -256.195, 239.494, -261.878, 237.915, -270.403, 238.231, -280.927, 238.125, -284.67, 237.716, -289.09, 235.401, -292.142, 232.454, -294.142, 230.139, -295.825, 227.613, -295.825, 223.719, -296.878, 219.404, -297.404, 216.142, -298.667, 211.406, -299.404, 208.249, -300.877, 203.934, -302.456, 200.566, -303.718, 197.199, -305.402, 193.936, -306.981, 191.095, -309.296, 188.569, -314.826, 189.444, -330.385, 230.39, -369.694, 233.665, -388.529, 215.649, -375.426, 195.995, -359.866, 180.435, -348.402, 157.506, -352.496, 140.308, -372.15, 131.3, -394.261, 141.946, -404.088, 165.695, -413.096, 187.806, -429.475, 190.263, -458.137, 175.522, -479.429, 149.316, -479.429, 130.481, -467.145, 119.835, -432.75, 112.465, -390.985, 92.811, -386.891, 70.7001, -400.812, 62.5109, -423.742, 68.2434, -470.421, 82.165, -500.721, 86.2596, -521.194, 78.0704, -543.361, 48.5609, -544.123, 6.1271, -532.659, -2.88104, -500.721, 3.67034, -456.499, 4.48924, -431.113, -11.0702, -429.475, -28.2676, -439.302, -44.646, -466.326, -48.7406, -515.461, -31.5432, -533.478, -44.646, -540.029, -74.946, -515.461, -133.089, -481.067, -144.554, -462.231, -134.727, -449.948, -125.719, -434.388, -128.176, -428.656, -138.003, -436.845, -151.925, -453.223, -184.681, -453.223, -204.335, -431.931, -220.714, -404.605, -221.532, -387.71, -215.8, -376.762, -205.154, -368.573, -189.595, -366.935, -173.216, -361.786, -159.835, -352.827, -150.292, -342.116, -143.086, -329.651, -139.385, -320.497, -140.164, -313.096, -144.06, -306.864, -156.135, -305.501, -172.3, -309.61, -184.681, -314.07, -192.489, -320.692, -198.332, -334.13, -206.901, -340.363, -214.497, -344.063, -221.898, -343.479, -237.674, -336.273, -249.164, -320.692, -258.779, -280.766, -271.633, -206.427, -278.857 )

[node name="Epithelial cell" type="Sprite" parent="."]
position = Vector2( -3.11894, -0.954689 )
scale = Vector2( 0.994608, 0.994608 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Camera_to_top"
anims/Camera_to_top = SubResource( 1 )
anims/Wobling = SubResource( 2 )

[node name="Input_Manager" parent="." instance=ExtResource( 6 )]
cameraPath = NodePath("../Game_Manager/Camera2D")
box_color = Color( 1, 1, 1, 0.392157 )

[node name="Bacteria_Manager" parent="." instance=ExtResource( 7 )]

[node name="F_Nutrient" parent="Bacteria_Manager" instance=ExtResource( 8 )]
position = Vector2( -97.1961, 3.88785 )

[node name="Game_Manager" parent="." instance=ExtResource( 9 )]

[node name="Camera2D" type="Camera2D" parent="Game_Manager"]
scale = Vector2( 1e-005, 1e-005 )
current = true

[node name="Text_introduction" type="Control" parent="."]
pause_mode = 2
visible = false
margin_left = -320.0
margin_top = -125.448
margin_right = -280.0
margin_bottom = -85.4477

[node name="ColorRect" type="ColorRect" parent="Text_introduction"]
margin_left = -25.72
margin_top = -13.8
margin_right = 111.64
margin_bottom = 51.55
rect_scale = Vector2( 5.24, 2.68 )
color = Color( 0.4, 0.4, 0.4, 0.380392 )

[node name="Label" type="Label" parent="Text_introduction"]
margin_right = 2165.0
margin_bottom = 48.0
text = "Microbes are everywhere. 
In fact, they even colonised the human body. We are home to trillions of them, 
which is more than the number of human cells. 
Prepare for a journey into the depth of a human's entrails. A human who, for now, has lost his health... 
You will be playing as populations of bacteria living in his digestive track. 
Collectively they are referred as the gut microbiota. 
Our body is their shelter, but they also directly impact our health. 
You and your host can only survive together."

[node name="Button" type="Button" parent="Text_introduction"]
margin_left = 506.303
margin_top = 131.765
margin_right = 596.303
margin_bottom = 151.765
text = "Start playing"
[connection signal="pressed" from="Text_introduction/Button" to="." method="_on_Button_pressed"]
